methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:53: error: Unmatched closing brace '}' ignored here
}
^